# SMART_api

./: Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
app/: completion_client.py  config.py  main.py  prompt.txt  schemas.py
