[tool.poetry]
name = "smart-api"
version = "0.1.0"
description = ""
authors = ["@aydkhuzin@ozon.ru <aydkhuzin@ozon.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
openai = "^1.48.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
